--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -93,17 +93,19 @@ RUN if [ -n "$CUDA_VERSION" ]; then \
         rm -f /etc/apt/sources.list.d/cuda.list && \
         rm -f /etc/apt/sources.list.d/nvidia-ml.list && \
         apt-get update && \
-        apt-get install -y --no-install-recommends wget && \
+        mkdir -p /tmp/cuda-keyring && \
+        if [ "$TARGETARCH" = "amd64" ]; then \
+            apt-get install -y --no-install-recommends wget && \
+            wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/${LINUX_DISTRO}${LINUX_DISTRO_VERSION}/x86_64/cuda-keyring_1.0-1_all.deb; \
+        else \
+            apt-get install -y gnupg gnupg1 gnupg2 && \
+            apt-get install -y --no-install-recommends wget && \
+            wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/${LINUX_DISTRO}${LINUX_DISTRO_VERSION}/arm64/cuda-keyring_1.0-1_all.deb; \
+        fi && \
         apt-get autoclean && \
         apt-get clean && \
         rm -rf /var/lib/apt/lists/* && \
         apt-key del 7fa2af80 && \
-        mkdir -p /tmp/cuda-keyring && \
-        if [ "$TARGETARCH" = "amd64" ]; then \
-            wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/${LINUX_DISTRO}${LINUX_DISTRO_VERSION}/x86_64/cuda-keyring_1.0-1_all.deb; \
-        else \
-            wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/${LINUX_DISTRO}${LINUX_DISTRO_VERSION}/arm64/cuda-keyring_1.0-1_all.deb; \
-        fi && \
         dpkg -i /tmp/cuda-keyring/cuda-keyring_1.0-1_all.deb && \
         rm -rf /tmp/cuda-keyring; \
     fi
