--- a/.github/workflows/pr-gpu.yaml
+++ b/.github/workflows/pr-gpu.yaml
@@ -2,47 +2,58 @@ name: PR GPU tests
 on:
   pull_request:
   workflow_dispatch:
-# Cancel old runs when a new commit is pushed to the same branch if not on main
-# or dev
+# Cancel old runs when a new commit is pushed to the same branch if not on main or dev
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
 jobs:
-  pytest-gpu:
+  pytest-gpu-1:
     uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@4gpu-testing
-    strategy:
-      matrix:
-        include:
-        - name: gpu-3.11-2.3-1gpu
-          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
-          markers: not daily and not remote and gpu and (doctest or not doctest)
-          pytest_command: coverage run -m pytest
-          composer_package_name: mosaicml
-          gpu_num: 1
-        - name: gpu-3.11-2.3-2gpu
-          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
-          markers: not daily and not remote and gpu and (doctest or not doctest)
-          pytest_command: coverage run -m pytest
-          composer_package_name: mosaicml
-          gpu_num: 2
-        - name: gpu-3.11-2.3-4gpu
-          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
-          markers: not daily and not remote and gpu and (doctest or not doctest)
-          pytest_command: coverage run -m pytest
-          composer_package_name: mosaicml
-          gpu_num: 4
-    name: ${{ matrix.name }}
+    name: Pytest GPU 1 GPU
     if: github.repository_owner == 'mosaicml'
     with:
-      composer_package_name: ${{ matrix.composer_package_name }}
-      container: ${{ matrix.container }}
+      composer_package_name: mosaicml
+      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
       git_repo: mosaicml/composer
       mcloud-timeout: 2250
-      name: ${{ matrix.name }}
       pip_deps: "[all]"
-      pytest-command: ${{ matrix.pytest_command }}
-      pytest-markers: ${{ matrix.markers }}
+      pytest-command: coverage run -m pytest
+      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
       python-version: 3.9
-      gpu_num: ${{ matrix.gpu_num }}
+      gpu_num: 1
+    secrets:
+      mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
+
+  pytest-gpu-2:
+    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@4gpu-testing
+    name: Pytest GPU 2 GPUs
+    if: github.repository_owner == 'mosaicml'
+    with:
+      composer_package_name: mosaicml
+      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+      git_repo: mosaicml/composer
+      mcloud-timeout: 2250
+      pip_deps: "[all]"
+      pytest-command: coverage run -m pytest
+      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
+      python-version: 3.9
+      gpu_num: 2
+    secrets:
+      mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
+
+  pytest-gpu-4:
+    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@4gpu-testing
+    name: Pytest GPU 4 GPUs
+    if: github.repository_owner == 'mosaicml'
+    with:
+      composer_package_name: mosaicml
+      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+      git_repo: mosaicml/composer
+      mcloud-timeout: 2250
+      pip_deps: "[all]"
+      pytest-command: coverage run -m pytest
+      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
+      python-version: 3.9
+      gpu_num: 4
     secrets:
       mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
